# DividendFlowPK

./: .env.render.example  .gitignore  DEPLOY.md  DEPLOYMENT_CALENDAR.md  DEPLOYMENT_STATUS.md  NCCPL_AUTOMATION_SETUP.md  NCCPL_INTEGRATION_COMPLETE.md  NCCPL_RISK_INTEGRATION.md  README.md  SETUP_BROWSERLESS.md  asset-manifest.json  deploy-render.ps1  deploy-render.sh  deploy.ps1  index.html  psx.py  render.yaml  requirements-scraper.txt  requirements.txt  robots.txt  send_email.py  sitemap.xml  sw.js  trigger-psx-workflow.ps1  vercel.json
.cursor/rules/: price-data-today-vs-yesterday.mdc
backend/: .env.example  package-lock.json  package.json  psxDividendParse.js  server.js
divflowpsx/: .gitignore  README.md  pyproject.toml
divflowpsx/src/divflowpsx/: __init__.py
divflowpsx/tests/: test_smoke.py
docs/: DIVFLOWPSX_REBUILD.md  EMAIL_DOMAIN_SETUP.md  SITE_TEMPORARILY_CLOSED.md  SUPABASE.md  deployment-calendar-cron.csv  deployment-calendar-summary.csv  deployment-calendar.csv  deployment-calendar.xlsx
docs/archives/divflowpsx-source/: LICENSE  README.md  pyproject.toml
docs/archives/divflowpsx-source/src/divflowpsx/: __init__.py  _browser.py  _ensure_browser.py  api.py  client.py  delay.py  progress.py  scraper.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
ingestion/: requirements.txt
scripts/: README.md  build-supabase-seed.py  csv-utils.js  deploy-auth-email.mjs  etl-csv-to-supabase.cjs  export-deployment-calendar.py  fetch-psx-logos.mjs  fix-supabase-auth-urls.mjs  health-check.js  nccpl-browser-automation.md  package-lock.json  package.json  process-nccpl-export.py  rebuild-calendar-from-psx.js  requirements-export.txt  run-all.js  run-news.js  scrape-nccpl-automated.py  scrape-nccpl-browserless.py  scrape-nccpl.cjs  scrape-nccpl.py  scrape-news.js  scrape-prices.js  scrape-psx.js  send-email.js  sync-ipos.mjs  update-github.js  verify-dividend-dps.js  verify-scrape-freshness.cjs
(+164 files in other folders)
